--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,23 @@
+buildscript {
+    ext.kotlin_version = '1.9.10' // Use the latest version from Kotlin releases
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
+
 
 rootProject.buildDir = "../build"
 subprojects {
