--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   font_awesome_flutter: ^10.7.0
   uuid: ^4.4.2
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
